Add golang config

--- a/.vimrc.custom.config
+++ b/.vimrc.custom.config
@@ -13,7 +13,9 @@
 " set cursorcolumn
 
 " indentLine 开启代码对齐线
-" let g:indentLine_enabled = 1
+let g:indentLine_enabled = 1
+" let g:go_def_mode = 'gopls'
+" let g:go_info_mode = 'gopls'
 
 " markdown
 " let system = system('uname -s')
@@ -37,4 +39,5 @@
 " let g:doxygen_enhanced_color=1
 " let g:DoxygenToolkit_commentType="Qt"
 
-
+set shell=/bin/bash
+colorscheme dracula
